# dotprint

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  convert.sh
debian/: changelog  control  copyright
example_input/: test2.KEYBCS2.prn
src/: .gitignore  AsciiCodepageTranslator.cc  AsciiCodepageTranslator.cpp  AsciiCodepageTranslator.h  CMakeLists.txt  CairoTTY.cc  CairoTTY.cpp  CairoTTY.h  CmdLineParser.cc  CmdLineParser.cpp  CmdLineParser.h  CodepageTranslator.cc  CodepageTranslator.cpp  CodepageTranslator.h  DotPrint.cc  DotPrint.cpp  Makefile  MarginsFactory.cc  MarginsFactory.h  PageSizeFactory.cc  PageSizeFactory.cpp  PageSizeFactory.h  PreprocessorFactory.cc  PreprocessorFactory.cpp  PreprocessorFactory.h
src/preprocessors/: CRLFPreprocessor.cc  CRLFPreprocessor.cpp  CRLFPreprocessor.h  EpsonPreprocessor.cc  EpsonPreprocessor.cpp  EpsonPreprocessor.h  SimplePreprocessor.cc  SimplePreprocessor.h
src/translators/: AsciiCodepageTranslator.cpp  AsciiCodepageTranslator.h  CodepageTranslator.h  IconvCodepageTranslator.cpp  IconvCodepageTranslator.h
tables/: cp850.trans  cp852.trans  cp857.trans  cp895.trans
test/: CMakeLists.txt  TestCodepageTranslator.cpp  TestData.cpp  TestData.h  TestEpsonPreprocessor.cpp  TestIconvCodepageTranslator.cpp  TestMain.cpp
test/data/CodepageTranslator/: simple-table.trans  wrong-format-wrong-byte.trans  wrong-format-wrong-line.trans  wrong-format-wrong-unicode-codepoint.trans
tests/: test1.KEYBCS2.prn  test1.txt  test2.txt  test3.KEYBCS2.prn  test3.txt  test4.txt  test_Graphics_invoice.prn
